files/script/test/parse_error/for/test_wrong_for1.ll

def main()
{
    var i

    for (i = "hello"; i < 10; i = i + 1) {
        print(i)
    }
}

#script("test/parse_error/for/test_wrong_for1.nl")
